--- a/02-open-source/ollama.ipynb
+++ b/02-open-source/ollama.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "506fab2a-a50c-42bd-a106-c83a9d2828ea",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-06-13 13:53:24--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.108.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+      "--2024-06-24 02:58:58--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 3832 (3.7K) [text/plain]\n",
-      "Saving to: 'minsearch.py'\n",
+      "Saving to: ‘minsearch.py’\n",
       "\n",
-      "     0K ...                                                   100%  579K=0.006s\n",
+      "minsearch.py        100%[===================>]   3.74K  --.-KB/s    in 0s      \n",
       "\n",
-      "2024-06-13 13:53:24 (579 KB/s) - 'minsearch.py' saved [3832/3832]\n",
+      "2024-06-24 02:58:58 (37.2 MB/s) - ‘minsearch.py’ saved [3832/3832]\n",
       "\n"
      ]
     }
@@ -31,17 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3ac947de-effd-4b61-8792-a6d7a133f347",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x1d9c9bd8890>"
+       "<minsearch.Index at 0x71ad2884e470>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8f087272-b44d-4738-9ea2-175ec63a058b",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "742ab881-499a-4675-83c4-2013ea1377b9",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "fe8bff3e-b672-42be-866b-f2d9bb217106",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "091a77e6-936b-448e-a04b-bad1001f5bb0",
    "metadata": {},
    "outputs": [],
@@ -157,17 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "9ee527a3-3331-4f4e-b6c8-f659ffc113f5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' This statement serves as an example to verify the functionality of various systems, such as text processing software or programming functions. It\\'s commonly used by developers during debugging sessions to ensure commands are working correctly without producing any unintended output.\\n\\nHere\\'s how you might include it in different contexts:\\n\\n**1. Using it as a command line test in a script:**\\nIf writing a shell script or using command-line tools, the statement can be inserted directly to demonstrate functionality. For instance, using `echo` on Unix-like systems:\\n```bash\\n#!/bin/bash\\necho \"This is a test\"\\necho \"This is also a test for confirmation.\"\\n```\\n\\n**2. Inserting it into a programming function as a placeholder or comment (in Python):**\\nAs a comment in code to remind future developers that the block can be replaced with actual implementation:\\n```python\\ndef process_text(input_string):\\n    # Test input: \"This is a test\"\\n    print(\"Testing...\")\\n    # Replace this line with your processing logic\\n    return input_string.upper()  # Example operation\\n```\\n\\n**3. Using in documentation or comments within software development code:**\\nDemonstrate how the statement can be used to clarify intentions when developing software, such as in a README file or inline comment:\\n```markdown\\n# Test Command Functionality\\nThis section contains commands that serve to test system functionality.\\n`echo \"This is a test\"` - A simple command to check output behavior.\\n```\\n\\nIn each case, the statement `This is a test` fulfills its role as a straightforward demonstration or placeholder within development and testing workflows.'"
+       "' This statement simply communicates the purpose of the text, which in this case is to indicate that the content following it serves as an example or a placeholder. It can be useful in various contexts such as during programming when initializing variables, testing out formatting, or providing examples for future reference. Here\\'s how you might use it within a more structured document:\\n\\n---\\n\\n**Title: Sample Content Usage**\\n\\nThis section introduces the concept of using text to signal test content or placeholder messages in various documents and systems.\\n\\n### Purpose of the Test Message\\nThe message \"This is a test\" serves several important functions:\\n\\n- **Placeholder Function**: It acts as a non-disruptive marker within your document, indicating where additional content may be inserted without affecting existing layouts or scripts. This can help in debugging processes by isolating sections of the document for targeted testing.\\n  \\n- **Example Signaling**: In development environments (such as web templates, software documentation, etc.), this message is often used to demonstrate how certain elements behave when populated with dynamic content. It helps developers understand the structure without being distracted by specific details at this stage.\\n\\n### Implementation Examples\\nHere are a few scenarios where \"This is a test\" can be effectively used:\\n\\n#### Web Development (HTML/CSS)\\n```html\\n<body>\\n  <h1>Document Content</h1>\\n  <p id=\"test-placeholder\">This is a test</p>\\n  <!-- Additional content or functionality -->\\n</body>\\n```\\n\\n#### Software Testing Scripts (Python Example)\\n```python\\ndef placeholder_content():\\n    return \"This is a test\"\\n\\n# Using the function in conditional logic for testing purposes\\nif condition:\\n    print(placeholder_content())\\nelse:\\n    pass  # No action needed here, just serving as an example.\\n```\\n\\n#### Markdown Documentation\\nIn a markdown file designed for documentation or API guides, \"This is a test\" might be used in code blocks to illustrate the expected output without affecting the document\\'s flow:\\n\\n```markdown\\n## Example Output\\nHere\\'s an example of how your function call should look like when testing. Note that this is just a placeholder:\\n\\n```python\\n# Sample Python function\\ndef greet(name):\\n    return f\"Hello, {name}!\"\\n\\n# Test case output\\nprint(greet(\"John\"))  # This will print \"Hello, John!\" if the test passes.\\nThis is a test\\n```\\n\\n### Conclusion\\nThe simplicity of \"This is a test\" belies its utility in various programming and documentation practices. It\\'s an essential tool for developers to use when demonstrating content without the need for specific data or functionality at that stage of development or testing.\\n\\n---'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "21aa255e-c971-44ca-9826-a721df3ad063",
    "metadata": {},
    "outputs": [
@@ -186,37 +186,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " This statement serves as an example to verify the functionality of various systems, such as text processing software or programming functions. It's commonly used by developers during debugging sessions to ensure commands are working correctly without producing any unintended output.\n",
+      " This statement simply communicates the purpose of the text, which in this case is to indicate that the content following it serves as an example or a placeholder. It can be useful in various contexts such as during programming when initializing variables, testing out formatting, or providing examples for future reference. Here's how you might use it within a more structured document:\n",
       "\n",
-      "Here's how you might include it in different contexts:\n",
+      "---\n",
       "\n",
-      "**1. Using it as a command line test in a script:**\n",
-      "If writing a shell script or using command-line tools, the statement can be inserted directly to demonstrate functionality. For instance, using `echo` on Unix-like systems:\n",
-      "```bash\n",
-      "#!/bin/bash\n",
-      "echo \"This is a test\"\n",
-      "echo \"This is also a test for confirmation.\"\n",
+      "**Title: Sample Content Usage**\n",
+      "\n",
+      "This section introduces the concept of using text to signal test content or placeholder messages in various documents and systems.\n",
+      "\n",
+      "### Purpose of the Test Message\n",
+      "The message \"This is a test\" serves several important functions:\n",
+      "\n",
+      "- **Placeholder Function**: It acts as a non-disruptive marker within your document, indicating where additional content may be inserted without affecting existing layouts or scripts. This can help in debugging processes by isolating sections of the document for targeted testing.\n",
+      "  \n",
+      "- **Example Signaling**: In development environments (such as web templates, software documentation, etc.), this message is often used to demonstrate how certain elements behave when populated with dynamic content. It helps developers understand the structure without being distracted by specific details at this stage.\n",
+      "\n",
+      "### Implementation Examples\n",
+      "Here are a few scenarios where \"This is a test\" can be effectively used:\n",
+      "\n",
+      "#### Web Development (HTML/CSS)\n",
+      "```html\n",
+      "<body>\n",
+      "  <h1>Document Content</h1>\n",
+      "  <p id=\"test-placeholder\">This is a test</p>\n",
+      "  <!-- Additional content or functionality -->\n",
+      "</body>\n",
       "```\n",
       "\n",
-      "**2. Inserting it into a programming function as a placeholder or comment (in Python):**\n",
-      "As a comment in code to remind future developers that the block can be replaced with actual implementation:\n",
+      "#### Software Testing Scripts (Python Example)\n",
       "```python\n",
-      "def process_text(input_string):\n",
-      "    # Test input: \"This is a test\"\n",
-      "    print(\"Testing...\")\n",
-      "    # Replace this line with your processing logic\n",
-      "    return input_string.upper()  # Example operation\n",
+      "def placeholder_content():\n",
+      "    return \"This is a test\"\n",
+      "\n",
+      "# Using the function in conditional logic for testing purposes\n",
+      "if condition:\n",
+      "    print(placeholder_content())\n",
+      "else:\n",
+      "    pass  # No action needed here, just serving as an example.\n",
       "```\n",
       "\n",
-      "**3. Using in documentation or comments within software development code:**\n",
-      "Demonstrate how the statement can be used to clarify intentions when developing software, such as in a README file or inline comment:\n",
+      "#### Markdown Documentation\n",
+      "In a markdown file designed for documentation or API guides, \"This is a test\" might be used in code blocks to illustrate the expected output without affecting the document's flow:\n",
+      "\n",
       "```markdown\n",
-      "# Test Command Functionality\n",
-      "This section contains commands that serve to test system functionality.\n",
-      "`echo \"This is a test\"` - A simple command to check output behavior.\n",
+      "## Example Output\n",
+      "Here's an example of how your function call should look like when testing. Note that this is just a placeholder:\n",
+      "\n",
+      "```python\n",
+      "# Sample Python function\n",
+      "def greet(name):\n",
+      "    return f\"Hello, {name}!\"\n",
+      "\n",
+      "# Test case output\n",
+      "print(greet(\"John\"))  # This will print \"Hello, John!\" if the test passes.\n",
+      "This is a test\n",
       "```\n",
       "\n",
-      "In each case, the statement `This is a test` fulfills its role as a straightforward demonstration or placeholder within development and testing workflows.\n"
+      "### Conclusion\n",
+      "The simplicity of \"This is a test\" belies its utility in various programming and documentation practices. It's an essential tool for developers to use when demonstrating content without the need for specific data or functionality at that stage of development or testing.\n",
+      "\n",
+      "---\n"
      ]
     }
    ],
@@ -249,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
