test commit in saturn cloud

--- a/02-open-source/huggingface-flan-t5.ipynb
+++ b/02-open-source/huggingface-flan-t5.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "506fab2a-a50c-42bd-a106-c83a9d2828ea",
    "metadata": {},
    "outputs": [
@@ -35,16 +35,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-06-13 19:36:42--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.108.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+      "--2024-06-26 02:47:18--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.109.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 3832 (3.7K) [text/plain]\n",
       "Saving to: ‘minsearch.py’\n",
       "\n",
       "minsearch.py        100%[===================>]   3.74K  --.-KB/s    in 0s      \n",
       "\n",
-      "2024-06-13 19:36:42 (50.3 MB/s) - ‘minsearch.py’ saved [3832/3832]\n",
+      "2024-06-26 02:47:18 (45.5 MB/s) - ‘minsearch.py’ saved [3832/3832]\n",
       "\n"
      ]
     }
@@ -56,17 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3ac947de-effd-4b61-8792-a6d7a133f347",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x7f07b4322940>"
+       "<minsearch.Index at 0x7f9ab6991370>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8f087272-b44d-4738-9ea2-175ec63a058b",
    "metadata": {},
    "outputs": [],
@@ -146,11 +146,11 @@
       "tmpfs           7.7G     0  7.7G   0% /sys/fs/cgroup\r\n",
       "/dev/nvme0n1p1  100G   36G   65G  36% /run\r\n",
       "tmpfs            14G     0   14G   0% /dev/shm\r\n",
-      "/dev/nvme2n1    2.0G  1.1G  858M  56% /home/jovyan\r\n",
+      "/dev/nvme2n1    2.0G  130M  1.8G   7% /home/jovyan\r\n",
       "tmpfs            14G  120K   14G   1% /home/jovyan/.saturn\r\n",
       "tmpfs            14G   12K   14G   1% /run/secrets/kubernetes.io/serviceaccount\r\n",
       "tmpfs           7.7G   12K  7.7G   1% /proc/driver/nvidia\r\n",
-      "tmpfs           7.7G  3.6M  7.7G   1% /run/nvidia-persistenced/socket\r\n",
+      "tmpfs           7.7G  3.3M  7.7G   1% /run/nvidia-persistenced/socket\r\n",
       "tmpfs           7.7G     0  7.7G   0% /proc/acpi\r\n",
       "tmpfs           7.7G     0  7.7G   0% /sys/firmware\r\n"
      ]
@@ -179,7 +179,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab8f600ab3bf4285af359b7ebecd03f6",
+       "model_id": "7068d395c62f4d18b92e83b9ef5193e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,7 +193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7dc06cbc3074d13b38b4405dd06bce1",
+       "model_id": "230701b3493744d993c255f66ce4f2f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,7 +207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c265985987934138bc59c84d26448efe",
+       "model_id": "ad007fe1bdc94d07a015284379ac3d2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,7 +221,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e9cdf126e99479e9c112e45907a4236",
+       "model_id": "a1208a4b70a9489b82ce6ee0e9a854dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -243,7 +243,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac29dc94c034480787ee4727ccfc91d7",
+       "model_id": "c1a65015b7ba4b60bcfec770eaa318bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,7 +257,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "597522b395a344d5a42cf91ff439dc53",
+       "model_id": "902ee08a3e84428abb147f9a56d5a4a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,7 +271,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d1ccd16d9f143b4a3bc22d17a1c7417",
+       "model_id": "7bd7df61305649d5b3fbba3a3c2e4629",
        "version_major": 2,
        "version_minor": 0
       },
@@ -285,7 +285,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7b18d9de2814a1cb711dc1451a769d3",
+       "model_id": "85b0564e7ac049b792c8ba01cb6e2b00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -299,7 +299,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "881907a9b94f4875a3fb919cfb12215d",
+       "model_id": "b4403cc4dbec423cb58ed6e588f4f122",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,7 +313,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50a172f264d7437fa3bf585d4a9a2b06",
+       "model_id": "1e17e554f412480bb17572cce1a49f6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,7 +327,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10bb13f26e0543f69b0d87ac38442d52",
+       "model_id": "84981868b2a14e84a2298464a8d65372",
        "version_major": 2,
        "version_minor": 0
       },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "a5c8c36a",
    "metadata": {},
    "outputs": [],
@@ -368,18 +368,12 @@
     "        context = context + f\"section: {doc['section']}\\nquestion: {doc['question']}\\nanswer: {doc['text']}\\n\\n\"\n",
     "    \n",
     "    prompt = prompt_template.format(question=query, context=context).strip()\n",
-    "    return prompt\n",
-    "\n",
-    "def llm(prompt):\n",
-    "    input_ids = tokenizer(prompt, return_tensors=\"pt\").input_ids.to(\"cuda\")\n",
-    "    outputs = model.generate(input_ids, )\n",
-    "    result = tokenizer.decode(outputs[0])\n",
-    "    return result"
+    "    return prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "bcc3c46b",
    "metadata": {},
    "outputs": [],
@@ -404,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "7dff26d5",
    "metadata": {},
    "outputs": [
@@ -414,7 +408,7 @@
        "\"Yes, even if you don't register, you're still eligible to submit the homeworks. Be aware, however, that there will be deadlines for turning in the final projects. So don't leave everything for the last minute.\""
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
