--- a/02-open-source/huggingface-mistral-7b.ipynb
+++ b/02-open-source/huggingface-mistral-7b.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "6744a00f",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "506fab2a-a50c-42bd-a106-c83a9d2828ea",
    "metadata": {},
    "outputs": [
@@ -35,16 +35,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-06-13 19:36:42--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.108.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+      "--2024-06-26 03:10:32--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.109.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 3832 (3.7K) [text/plain]\n",
       "Saving to: ‘minsearch.py’\n",
       "\n",
       "minsearch.py        100%[===================>]   3.74K  --.-KB/s    in 0s      \n",
       "\n",
-      "2024-06-13 19:36:42 (50.3 MB/s) - ‘minsearch.py’ saved [3832/3832]\n",
+      "2024-06-26 03:10:32 (40.8 MB/s) - ‘minsearch.py’ saved [3832/3832]\n",
       "\n"
      ]
     }
@@ -56,17 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "3ac947de-effd-4b61-8792-a6d7a133f347",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x7fc130288970>"
+       "<minsearch.Index at 0x7feb25c29c10>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "8f087272-b44d-4738-9ea2-175ec63a058b",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "fe8bff3e-b672-42be-866b-f2d9bb217106",
    "metadata": {},
    "outputs": [],
@@ -132,17 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "07d4639a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['HF_TOKEN'] = 'hf_blabla'"
+    "# os.environ['HF_TOKEN'] = 'hf_blabla'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "2b69a481",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "6650945d",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "cfe5b58d",
    "metadata": {},
    "outputs": [],
@@ -184,14 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "311fd41d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95ce1023e96346768985fad0ffedbaad",
+       "model_id": "7a7fc930e41d47aca6dd3d9f5715c53c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab9ccd09e5c546c18678fab88a4b4536",
+       "model_id": "b8cb5aadd372459790b2c93ccf73ed0b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -226,7 +226,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "037d21f6a6b9419ca83f5ead1cd22f85",
+       "model_id": "96eddd58d208437095f039f11736fc63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,7 +240,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fc2ef41f8414b77a8f833b8e1e794ec",
+       "model_id": "32016a5926e44b2e8cd84d69bd358b71",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,7 +254,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5daa1086719b416cade75549effb2337",
+       "model_id": "033f08a5b40c4a4bacce98317126e75a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,7 +268,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63b1c033ad86405eb7455989951ba2df",
+       "model_id": "6d488600caa04de6bb68b6c1805fed4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -282,7 +282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dc66a7b147246f28eacf34998eb0c4f",
+       "model_id": "4893337f11e747d5bf617aee323b3a78",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28ea347a775e4b7d91e0923bfc89b697",
+       "model_id": "df823e473f3a4defb106a01a78c09e57",
        "version_major": 2,
        "version_minor": 0
       },
@@ -310,7 +310,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17b14dc41f66482abd9efe217be69872",
+       "model_id": "1aac3cca9e9d4b8ca05c7033a1f079a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -324,7 +324,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df30ec1fb8864ea39286b637f9a0cfcd",
+       "model_id": "694a0605ae2d41efa803a1b91870168d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -338,7 +338,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6613cd42eae24c86b3776f2062b19de7",
+       "model_id": "4366a7d67a0b4c4c8b576eafa1e6cf57",
        "version_major": 2,
        "version_minor": 0
       },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "4b7f6fd7",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "id": "da66a082",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "id": "41b774d3",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n",
+      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/transformers/generation/configuration_utils.py:515: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.7` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
+      "  warnings.warn(\n",
+      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/transformers/generation/configuration_utils.py:520: UserWarning: `do_sample` is set to `False`. However, `top_p` is set to `0.95` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_p`.\n",
+      "  warnings.warn(\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n",
+      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/bitsandbytes/nn/modules.py:426: UserWarning: Input type into Linear4bit is torch.float16, but bnb_4bit_compute_dtype=torch.float32 (default). This will lead to slow inference or training speed.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -419,7 +426,7 @@
        "'Yes, you can still join the course.'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,6 +434,14 @@
    "source": [
     "rag(\"I just discovered the course. Can I still join it?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7127ce4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
