--- a/02-open-source/huggingface-phi3.ipynb
+++ b/02-open-source/huggingface-phi3.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "506fab2a-a50c-42bd-a106-c83a9d2828ea",
    "metadata": {},
    "outputs": [
@@ -35,8 +35,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-06-13 19:36:42--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.108.133, ...\n",
+      "--2024-06-26 02:59:48--  https://raw.githubusercontent.com/alexeygrigorev/minsearch/main/minsearch.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.108.133, ...\n",
       "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 3832 (3.7K) [text/plain]\n",
@@ -44,7 +44,7 @@
       "\n",
       "minsearch.py        100%[===================>]   3.74K  --.-KB/s    in 0s      \n",
       "\n",
-      "2024-06-13 19:36:42 (50.3 MB/s) - ‘minsearch.py’ saved [3832/3832]\n",
+      "2024-06-26 02:59:48 (35.0 MB/s) - ‘minsearch.py’ saved [3832/3832]\n",
       "\n"
      ]
     }
@@ -56,17 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3ac947de-effd-4b61-8792-a6d7a133f347",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.Index at 0x7f58c573f970>"
+       "<minsearch.Index at 0x7f6c2f51af70>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8f087272-b44d-4738-9ea2-175ec63a058b",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "fe8bff3e-b672-42be-866b-f2d9bb217106",
    "metadata": {},
    "outputs": [],
@@ -132,17 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "def281ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f5891365750>"
+       "<torch._C.Generator at 0x7f6c2eeabcd0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1a2c29d5",
    "metadata": {
     "scrolled": true
@@ -165,7 +165,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "848f3d8a68b84dc79caf6b612bd559fe",
+       "model_id": "f4eca364f3734da9a7403e45c45bf342",
        "version_major": 2,
        "version_minor": 0
       },
@@ -179,7 +179,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f27e92cbc2441df95abd80fbc835d62",
+       "model_id": "0e52a1603f4b4facbaee1d4c7faac2cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36d6864e25704d519b8ca1583c49d28a",
+       "model_id": "e697df1e34da40628994afd2ffeccf55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -227,7 +227,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56e94e8225d1442ca876097ee8ff198e",
+       "model_id": "2c18d722ad594f6991ec389f5eeb454f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,7 +241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8b8f7ff372a4562b2696bdb104bc512",
+       "model_id": "bab92711e2be4dd29d2ae18e48a48065",
        "version_major": 2,
        "version_minor": 0
       },
@@ -255,7 +255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdda6929599d4c2789ee39b5e630f843",
+       "model_id": "38283764a3b345f9a8a96a4ff9ef24d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,7 +269,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "145ded2da5a0481ba4ddaad65af2afb6",
+       "model_id": "f4cf2f2b700e4afc815f20673d4f520e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,7 +283,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c88be68816c54e17a84c168b5ffcce6c",
+       "model_id": "0252ec7434374f238644e06a4188c9b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -297,7 +297,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11d66a9f1b8f4f2e80e911cb52383cc9",
+       "model_id": "6e91898b7a6345b48eb41e40ed604645",
        "version_major": 2,
        "version_minor": 0
       },
@@ -311,7 +311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f556615fb7c64f5cb764e3e865548000",
+       "model_id": "e410a7e3c9c047ee8de64df123857d57",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,7 +325,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eeba1a36b07149d5a4c0314f5367deaa",
+       "model_id": "e009712f853f48c1902e9c160b322063",
        "version_major": 2,
        "version_minor": 0
       },
@@ -339,7 +339,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42093b392eff41ed997e79d4ea1f1bd5",
+       "model_id": "64ea1461e37649bcb7b60471d270e009",
        "version_major": 2,
        "version_minor": 0
       },
@@ -353,7 +353,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ce61494a57946b7ab6d88049451995a",
+       "model_id": "7edaa6f2b6b24cfe8dbc4fa98a21fc68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -367,7 +367,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed4a42b2fa92450fa0a732402bed30c0",
+       "model_id": "70bf29d8dd2542bda391c6e96800ef89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d63609b5",
    "metadata": {},
    "outputs": [],
@@ -442,9 +442,9 @@
     "    ]\n",
     "\n",
     "    generation_args = {\n",
-    "        \"max_new_tokens\": 500,\n",
+    "        \"max_new_tokens\": 1000,\n",
     "        \"return_full_text\": False,\n",
-    "        \"temperature\": 0.0,\n",
+    "        \"temperature\": 0.5,\n",
     "        \"do_sample\": False,\n",
     "    }\n",
     "\n",
@@ -458,6 +458,14 @@
    "id": "41b774d3",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/transformers/generation/configuration_utils.py:515: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.5` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
